--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -31,10 +31,10 @@
 
             <p>I am a <a href="http://en.wikipedia.org/wiki/Hacker_(programmer_subculture)" title="This kind of hacker.">'hacker'</a> at heart, I love tinkering with things and seeing how they work. When I'm not working on something I'm usually thinking or reading up on: machine learning, ways of organizing and structuring the massive data on the web and providing meaningful statistics, programming language design and implementation, biology, and entrepreneurship. I believe constantly, and consistently, learning is a crucial part of this field of work. I am always looking for challenges and something that will push me to give my best.</p>
 
-            <p> My not-so-technical interests and hobbies are: </p>
+            <p> <strong>My not-so-technical interests and hobbies are</strong>: </p>
             <ul id="hobbies">    
                 <li> jamming on my <a href="http://en.wikipedia.org/wiki/Gibson_Les_Paul" title="Gibson Les Paul">guitar</a> and 'trying' to make a band </li>
-                <li> yes, i do enjoy the odd zombie <a href="http://www.imdb.com/title/tt1520211/" title="The Walking Dead">show</a> and <a href="http://www.imdb.com/title/tt1156398/" title="Zombieland">movie</a> </li>
+                <li> cinema, yes, i do enjoy the odd zombie <a href="http://www.imdb.com/title/tt1520211/" title="The Walking Dead">show</a> and <a href="http://www.imdb.com/title/tt1156398/" title="Zombieland">movie</a> </li>
                 <li> gardening, there's just somethign about producing something with your own hands </li>
                 <li> reading anything from <a href="http://en.wikipedia.org/wiki/The_Hound_of_the_Baskervilles" title="The Hound of the Baskervilles">mystery</a> novels, to sci-fi, to biographies </li>
             </ul>
@@ -49,13 +49,12 @@
 
             <ul id="skills">
 
-                <li>Python & Django </li>
-                <li>(X)HTML & CSS </li>
-                <li>Javascript/jQuery</li>
-                <li>Linux/Apache/MySQL/PHP (LAMP)</li>
-                <li> </li>
-                <li> </li>
-                <li> </li>
+                <li>Languages: Python, PHP, Bash, CSS, HTML, Javascript </li>
+                <li>Frameworks: Django, jQuery, Pylons </li>
+                <li>Operating Systems: Linux (Gentoo, Archlinux, Debian), Windows (XP/Vista/7)</li>
+                <li>Server Technologies: Apache, nginx, lighttpd </li>
+                <li>Databases: MySQL, PostgreSQL, SQLite</li>
+                <li>Various Software: Vim, Git, OpenSSH, Celery</li>
 
             </ul>
         </div>
