Finishing touches, fixed some grammer.

--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -38,13 +38,16 @@
                 <li> gardening, there's just somethign about producing something with your own hands </li>
                 <li> reading anything from <a href="http://en.wikipedia.org/wiki/The_Hound_of_the_Baskervilles" title="The Hound of the Baskervilles">mystery</a> novels, to sci-fi, to biographies </li>
             </ul>
+            
+            <p> Check out some <a href="#work">work</a> I've done. If you like what you see don't hesitate to <a href="#contact">get in in touch</a>. </p>
+
 
         </div>
 
         <div id="services">
             <h3> What I do </h3>
             <p>In short, I am a <a href="http://en.wikipedia.org/wiki/Web_developer" title="Web Developer">web developer</a> focused on building high-end web sites utilizing the latest technologies to acheive the desired results as quickly and painlessy as possible.</p>
-            <p>My main tool of choice is <a href="http://djangoproject.com" title="Django, not the guitarist!">Django</a>, a <a href="http://python.org/" title="Python, Ssssss">Python</a> web framework, that's motto is "for perfectionists with deadlines" which I think fits the bill. On the front-end side of things I am quite fond of the <a href="http://jquery.com/" title="jQuery">jQuery</a> Javascript framework and <a href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets" title="Cascading Style Sheets">CSS2/3</a> coupled with <a href="http://en.wikipedia.org/wiki/HTML">HTML4/5</a> to make websites engaging and functional. Also, I drink from the <a href="http://en.wikipedia.org/wiki/Editor_war" title="vim">vim</a> kool-aid. </p>   
+            <p>My main tool of choice is <a href="http://djangoproject.com" title="Django, not the guitarist!">Django</a>, a <a href="http://python.org/" title="Python, Ssssss">Python</a> web framework; its motto is "for perfectionists with deadlines" which, I think, fits the bill. On the front-end side of things I am quite fond of the <a href="http://jquery.com/" title="jQuery">jQuery</a> Javascript framework and <a href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets" title="Cascading Style Sheets">CSS2/3</a> coupled with <a href="http://en.wikipedia.org/wiki/HTML">HTML4/5</a> to make websites engaging and functional. Also, I drink from the <a href="http://en.wikipedia.org/wiki/Editor_war" title="vim">vim</a> kool-aid. </p>   
             <h3> Technical Expertise </h3>
 
             <ul id="skills">
