--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -25,17 +25,17 @@
         <div id="aboutme">
             <h3> Hey there! </h3>
             
-            <p> Hi, welcome to my little home on the web. My name is Titus Soporan, and I'm a 21-year old dude from Ontario, Canada. Originally from <a href="http://en.wikipedia.org/wiki/Romania" title="Romania">Romania</a>, I immigrated to Canada at the age of six.</p>
-            <p> I was first introduced to computers around 1997 and have been hooked ever since, whether it was playing <a href="{{ MEDIA_URL }}images/mkold.jpg" title="Old-school">Mortal Kombat</a> on DOS or fiddling with the hardware on my old 100MHz <a href="{{ MEDIA_URL }}images/dellold.jpg" title="Remember /these/ Dells?">Dell Optiplex Gl 5100</a>, I always had a computer nearby. </p>
-            <p> Over time my interests shifted to programming with a focus on the web. Originally I was doing <a href="http://en.wikipedia.org/wiki/Client-side_scripting" title="Client-side scripting">client-side</a> coding, but gradually I dived deeper into the <a href="http://en.wikipedia.org/wiki/Server-side_scripting" title="Server-side scripting">server-side</a> of things and found a pot of gold there. I believe this blend of experience allows me to see the full picture, and acheive a complete solution. </p> 
+            <p> Hi, welcome to my little home on the web. My name is Titus Soporan and I'm a 21-year old dude from Ontario, Canada. Originally from <a href="http://en.wikipedia.org/wiki/Romania" title="Romania">Romania</a>, I immigrated to Canada at the age of six.</p>
+            <p> I was first introduced to computers around 1997 and have been hooked ever since. Whether it was playing <a href="{{ MEDIA_URL }}images/mkold.jpg" title="Old-school">Mortal Kombat</a> on DOS or fiddling with the hardware on my old 100MHz <a href="{{ MEDIA_URL }}images/dellold.jpg" title="Remember /these/ Dells?">Dell Optiplex Gl 5100</a>, I always had a computer nearby. </p>
+            <p> Over time my interests shifted to programming with a focus on the web. Originally I was doing <a href="http://en.wikipedia.org/wiki/Client-side_scripting" title="Client-side scripting">client-side</a> coding, but gradually I dived deeper into the <a href="http://en.wikipedia.org/wiki/Server-side_scripting" title="Server-side scripting">server-side</a> of things and found my pot of gold there. </p> 
 
-            <p>I am a <a href="http://en.wikipedia.org/wiki/Hacker_(programmer_subculture)" title="This kind of hacker.">'hacker'</a> at heart, I love tinkering with things and seeing how they work. When I'm not working on something I'm usually thinking or reading up on: machine learning, ways of organizing and structuring the massive data on the web and providing meaningful statistics, programming language design and implementation, biology, and entrepreneurship. I believe constantly, and consistently, learning is a crucial part of this field of work. I am always looking for challenges and something that will push me to give my best.</p>
+            <p>I am a <a href="http://en.wikipedia.org/wiki/Hacker_(programmer_subculture)" title="This kind of hacker.">'hacker'</a> at heart, I love tinkering with things and seeing how they work. When I'm not working on something I'm usually thinking or reading up on: machine learning, ways of organizing and structuring the massive data on the web and providing meaningful statistics, programming language design and implementation, biology, and entrepreneurship. I believe constantly learning is a crucial part of this field of work. I am always looking for challenges and something that will push me to give my best.</p>
 
             <p> <strong>My not-so-technical interests and hobbies are</strong>: </p>
             <ul id="hobbies">    
-                <li> jamming on my <a href="http://en.wikipedia.org/wiki/Gibson_Les_Paul" title="Gibson Les Paul">guitar</a> and 'trying' to make a band </li>
+                <li> jammin' on my <a href="http://en.wikipedia.org/wiki/Gibson_Les_Paul" title="Gibson Les Paul">guitar</a> and 'trying' to make a band </li>
                 <li> cinema, yes, i do enjoy the odd zombie <a href="http://www.imdb.com/title/tt1520211/" title="The Walking Dead">show</a> and <a href="http://www.imdb.com/title/tt1156398/" title="Zombieland">movie</a> </li>
-                <li> gardening, there's just somethign about producing something with your own hands </li>
+                <li> gardening, there's just something about producing something with your own hands </li>
                 <li> reading anything from <a href="http://en.wikipedia.org/wiki/The_Hound_of_the_Baskervilles" title="The Hound of the Baskervilles">mystery</a> novels, to sci-fi, to biographies </li>
             </ul>
             
