Added 404/500 pages, some cleanup.

--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -35,7 +35,7 @@
             <ul id="hobbies">    
                 <li> jammin' on my <a href="http://en.wikipedia.org/wiki/Gibson_Les_Paul" title="Gibson Les Paul">guitar</a> and 'trying' to make a band </li>
                 <li> cinema, yes, i do enjoy the odd zombie <a href="http://www.imdb.com/title/tt1520211/" title="The Walking Dead">show</a> and <a href="http://www.imdb.com/title/tt1156398/" title="Zombieland">movie</a> </li>
-                <li> gardening, there's just something about producing something with your own hands </li>
+                <li> gardening </li>
                 <li> reading anything from <a href="http://en.wikipedia.org/wiki/The_Hound_of_the_Baskervilles" title="The Hound of the Baskervilles">mystery</a> novels, to sci-fi, to biographies </li>
             </ul>
             
@@ -47,7 +47,7 @@
         <div id="services">
             <h3> What I do </h3>
             <p>In short, I am a <a href="http://en.wikipedia.org/wiki/Web_developer" title="Web Developer">web developer</a> focused on building high-end web sites utilizing the latest technologies to acheive the desired results as quickly and painlessy as possible.</p>
-            <p>My main tool of choice is <a href="http://djangoproject.com" title="Django, not the guitarist!">Django</a>, a <a href="http://python.org/" title="Python, Ssssss">Python</a> web framework; its motto is "for perfectionists with deadlines" which, I think, fits the bill. On the front-end side of things I am quite fond of the <a href="http://jquery.com/" title="jQuery">jQuery</a> Javascript framework and <a href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets" title="Cascading Style Sheets">CSS2/3</a> coupled with <a href="http://en.wikipedia.org/wiki/HTML">HTML4/5</a> to make websites engaging and functional. Also, I drink from the <a href="http://en.wikipedia.org/wiki/Editor_war" title="vim">vim</a> kool-aid. </p>   
+            <p>My main tool of choice is <a href="http://djangoproject.com" title="Django, not the guitarist!">Django</a>, a <a href="http://python.org/" title="Python, Ssssss">Python</a> web framework; its motto is "for perfectionists with deadlines" which, I think, fits the bill. On the front-end side of things I use <a href="http://jquery.com/" title="jQuery">jQuery</a> and <a href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets" title="Cascading Style Sheets">CSS2/3</a> coupled with <a href="http://en.wikipedia.org/wiki/HTML">HTML4/5</a> to make websites engaging and functional. Also, I drink from the <a href="http://en.wikipedia.org/wiki/Editor_war" title="vim">vim</a> kool-aid. </p>   
             <h3> Technical Expertise </h3>
 
             <ul id="skills">
@@ -110,8 +110,8 @@
             <address>     
                 <p><strong>Phone</strong>: <a href="tel:519-570-9888">519-570-9888</a></p>
                 <p><strong>E-mail</strong>: <a href="mailto:titus@tsoporan.com">titus@tsoporan.com</a></p>
-                <p><strong>Google Talk</strong>: titus@tsoporan.com</p>
-                <p><strong>IRC</strong>: tsoporan @ irc://irc.freenode.net </p>
+                <p><strong>Google Talk</strong>: <a href="xmpp:titus@tsoporan.com">titus@tsoporan.com</a></p>
+                <p><strong>IRC</strong>: tsoporan @ <a href="irc://irc.freenode.net">irc.freenode.net</a> </p>
             </address>
         </div>
     
