--- a/templates/error_base.html
+++ b/templates/error_base.html
@@ -3,23 +3,38 @@
 
 {% block styles %}
 <style>
-body { text-align: center;}
-h1 { font-size: 50px; }
-body { font: 20px Constantia, 'Hoefler Text',  "Adobe Caslon Pro", Baskerville, Georgia, Times, serif; color: #999; text-shadow: 2px 2px 2px rgba(200, 200, 200, 0.5); }
+body { text-align: center;
+    background: #e8e8f0;
+}
+h1 { font-size: 70px; 
+    text-shadow: 0 1px 0px #fff
+    color: #182945;
+}
+body {
+    font-family: "Droid Sans", arial;
+    color: #111;
+
+}
+#main {
+    background: #fff;
+    width: 80%;
+    margin: 0 auto;
+    padding: 0 0 20px 0;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;    
+}
 ::-moz-selection{ background:#FF5E99; color:#fff; }
 ::selection { background:#FF5E99; color:#fff; } 
 details { display:block; }
 a { color: rgb(36, 109, 56); text-decoration:none; }
 a:hover { color: rgb(96, 73, 141) ; text-shadow: 2px 2px 2px rgba(36, 109, 56, 0.5); }
-span[frown] { transform: rotate(90deg); display:inline-block; color: #bbb; }
 </style>
 {% endblock styles %}
 
-
-
 {% block details %}
-<details>
+<div id="main">
   <summary><h1>Not found</h1></summary>
-  <p><span frown>:(</span></p>
-</details>
+  <p>The requested page was not found. =(</p>
+</div>
 {% endblock details %}
